// Vitest Snapshot v1

exports[`group topics > should failed on not found group 1`] = `
{
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "group not found",
  "statusCode": 404,
}
`;

exports[`group topics > should fetch group profile 1`] = `
{
  "group": {
    "createdAt": 1531631310,
    "icon": "https://lain.bgm.tv/pic/icon/s/000/00/42/4215.jpg?r=1531631345",
    "id": 4215,
    "name": "sandbox",
    "nsfw": false,
    "summary": "[s]非[/s]官方沙盒",
    "title": "沙盒",
  },
  "inGroup": false,
  "recentAddedMembers": [
    {
      "avatar": {
        "large": "https://lain.bgm.tv/pic/user/l/000/38/29/382951.jpg?r=1571167246",
        "medium": "https://lain.bgm.tv/pic/user/m/000/38/29/382951.jpg?r=1571167246",
        "small": "https://lain.bgm.tv/pic/user/s/000/38/29/382951.jpg?r=1571167246",
      },
      "id": 382951,
      "nickname": "树洞酱",
      "username": "382951",
    },
    {
      "avatar": {
        "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
        "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
        "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
      },
      "id": 427613,
      "nickname": "nickname 427613",
      "username": "427613",
    },
    {
      "avatar": {
        "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
        "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
        "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
      },
      "id": 287622,
      "nickname": "nickname 287622",
      "username": "287622",
    },
  ],
  "topics": [
    {
      "creator": {
        "avatar": {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 287622,
        "nickname": "nickname 287622",
        "username": "287622",
      },
      "id": 371602,
      "lastRepliedAt": "2022-07-15T11:47:28.000Z",
      "parentID": 4215,
    },
  ],
}
`;

exports[`group topics > should fetch topic details 1`] = `
{
  "group": {
    "createdAt": 1531631310,
    "icon": "https://lain.bgm.tv/pic/icon/s/000/00/42/4215.jpg?r=1531631345",
    "id": 4215,
    "name": "sandbox",
    "nsfw": false,
    "summary": "[s]非[/s]官方沙盒",
    "title": "沙盒",
  },
  "replies": [
    {
      "createdAt": 1658030918,
      "creator": {
        "avatar": {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 287622,
        "isFriend": false,
        "nickname": "nickname 287622",
        "username": "287622",
      },
      "id": 2056216,
      "replies": [],
      "state": 6,
      "text": "",
    },
    {
      "createdAt": 1662276469,
      "creator": {
        "avatar": {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 287622,
        "isFriend": false,
        "nickname": "nickname 287622",
        "username": "287622",
      },
      "id": 2092004,
      "replies": [],
      "state": 7,
      "text": "",
    },
    {
      "createdAt": 1662282514,
      "creator": {
        "avatar": {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 1,
        "isFriend": false,
        "nickname": "nickname 1",
        "username": "1",
      },
      "id": 2092065,
      "replies": [],
      "state": 5,
      "text": "",
    },
    {
      "createdAt": 1662282518,
      "creator": {
        "avatar": {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 1,
        "isFriend": false,
        "nickname": "nickname 1",
        "username": "1",
      },
      "id": 2092066,
      "replies": [],
      "state": 1,
      "text": "",
    },
    {
      "createdAt": 1662282523,
      "creator": {
        "avatar": {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 1,
        "isFriend": false,
        "nickname": "nickname 1",
        "username": "1",
      },
      "id": 2092067,
      "replies": [],
      "state": 2,
      "text": "",
    },
    {
      "createdAt": 1662282554,
      "creator": {
        "avatar": {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 287622,
        "isFriend": false,
        "nickname": "nickname 287622",
        "username": "287622",
      },
      "id": 2092069,
      "replies": [
        {
          "createdAt": 1662283112,
          "creator": {
            "avatar": {
              "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
              "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
              "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
            },
            "id": 287622,
            "isFriend": false,
            "nickname": "nickname 287622",
            "username": "287622",
          },
          "id": 2092074,
          "state": 0,
          "text": "sub",
        },
      ],
      "state": 0,
      "text": "q",
    },
  ],
}
`;

exports[`group topics > should return data 1`] = `
{
  "data": [
    {
      "creator": {
        "avatar": {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 287622,
        "nickname": "nickname 287622",
        "username": "287622",
      },
      "id": 371602,
      "lastRepliedAt": "2022-07-15T11:47:28.000Z",
      "parentID": 4215,
    },
  ],
  "total": 1,
}
`;
